# rsomics-featurecounts

./: Cargo.toml  README.md
benches/: bench.rs  featurecounts.rs
src/: cigar.rs  cli.rs  count.rs  gtf.rs  index.rs  lib.rs  output.rs
tests/: compat.rs  smoke.rs
tests/golden/: adv.bam  adv.gtf  small.bam  small.gff
