[package]
name = "rsomics-featurecounts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Count reads over genomic features (BAM + GFF) — Rust port of featureCounts (Subread)"

[[bin]]
name = "rsomics-featurecounts"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
noodles = { workspace = true, features = ["sam", "bam", "gff"] }
rayon.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
